// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow function declaration scenarios - templateElement cases exported arrow function cases handle templateElement case 1 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var var1 = t('key_我好');
  return <div data-i18n=\\"[\\\\\\"key_\\\\u6211\\\\u597D\\\\\\",\\\\\\"key_\\\\u4F60\\\\u597D\\\\\\"]\\">{t('key_你好')}</div>;
};"
`;

exports[`arrow function declaration scenarios - templateElement cases exported arrow function cases handle templateElement case 2 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var var1 = t('key_我好');
  console.log(\\"\\\\u4E0D\\\\u597D\\");
  return <div data-i18n=\\"[\\\\\\"key_\\\\u6211\\\\u597D\\\\\\",\\\\\\"key_\\\\u4F60\\\\u597D\\\\\\"]\\">{t('key_你好')}</div>;
};"
`;

exports[`arrow function declaration scenarios - templateElement cases exported arrow function cases handle templateElement case 3 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var var1 = t('key_我好');
  console.log(\\"\\\\u4E0D\\\\u597D\\");
  console.log({
    a: \\"\\\\u4E0D\\\\u597D\\"
  });
  return <div data-i18n=\\"[\\\\\\"key_\\\\u6211\\\\u597D\\\\\\",\\\\\\"key_\\\\u4F60\\\\u597D\\\\\\"]\\">{t('key_你好')}</div>;
};"
`;

exports[`arrow function declaration scenarios - templateElement cases exported arrow function cases handle templateElement wrapper with jsxFragment case 1 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var var1 = t('key_我好');
  return <><div data-i18n=\\"[\\\\\\"key_\\\\u6211\\\\u597D\\\\\\",\\\\\\"key_\\\\u4F60\\\\u597D\\\\\\"]\\">{t('key_你好')}</div></>;
};"
`;

exports[`arrow function declaration scenarios - templateElement cases exported arrow function cases handle templateElement wrapper with jsxFragment case 2 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var var1 = t('key_我好');
  return <><div data-i18n='[\\"我好\\"]'></div></>;
};"
`;
